--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <section id="piano">
+        <div class="bnner"><h2>devloped by fluvinu with ♥</h2></div>
         <div class="key">
             <div class="black-keys">
                 <div class="key black-key"></div>
